0326-1: SIMD 지원