@@ -5,6 +5,10 @@ plugins {
 group = 'com.github.goguma9071.jvmplus.core'
 version = '1.0-SNAPSHOT'
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ["--add-modules", "jdk.incubator.vector"]
+}
+
 dependencies {
     // FFM API는 Java 22 표준이므로 추가 의존성 없음
 }
