@@ -8,6 +8,11 @@ version = '1.0-SNAPSHOT'
 
 application {
     mainClass = 'com.github.goguma9071.jvmplus.Main'
+    applicationDefaultJvmArgs = ["--add-modules", "jdk.incubator.vector", "--enable-native-access=ALL-UNNAMED"]
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ["--add-modules", "jdk.incubator.vector"]
 }
 
 dependencies {
